@@ -4,7 +4,7 @@ package org.jetbrains.idea.maven.wizards;
 import com.intellij.ide.projectWizard.ProjectWizardTestCase;
 import com.intellij.ide.util.newProjectWizard.AbstractProjectWizard;
 import com.intellij.maven.testFramework.MavenTestCase;
-import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.maven.testFramework.utils.MavenImportingTestCaseKt;
 import com.intellij.openapi.externalSystem.service.project.manage.ExternalProjectsManagerImpl;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
@@ -29,7 +29,6 @@ import org.jetbrains.idea.maven.utils.MavenUtil;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
@@ -39,7 +38,6 @@ import static com.intellij.testFramework.PlatformTestUtil.assertPathsEqual;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProjectWizard> {
-
   @Override
   public void tearDown() throws Exception {
     try {
@@ -79,7 +77,6 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
   public void testImportProject() throws Exception {
     Path pom = createPom();
     Module module = importProjectFrom(pom.toString(), null, new MavenProjectImportProvider());
-    assertThat(module.getName()).isEqualTo(pom.getParent().toFile().getName());
 
     afterImportFinished(module.getProject(), c -> {
       assertThat(ModuleManager.getInstance(c.getProject()).getModules()).hasOnlyOneElementSatisfying(
@@ -98,7 +95,6 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
     createMavenWrapper(pom,
                        "distributionUrl=https://cache-redirector.jetbrains.com/repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.8.1/apache-maven-3.8.1-bin.zip");
     Module module = importProjectFrom(pom.toString(), null, new MavenProjectImportProvider());
-    assertThat(module.getName()).isEqualTo(pom.getParent().toFile().getName());
 
     afterImportFinished(module.getProject(), c -> {
       assertThat(ModuleManager.getInstance(c.getProject()).getModules()).hasOnlyOneElementSatisfying(
@@ -113,7 +109,6 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
     Path pom = createPom();
     createMavenWrapper(pom, "property1=value1");
     Module module = importProjectFrom(pom.toString(), null, new MavenProjectImportProvider());
-    assertThat(module.getName()).isEqualTo(pom.getParent().toFile().getName());
     String mavenHome = MavenWorkspaceSettingsComponent.getInstance(module.getProject()).getSettings().getGeneralSettings().getMavenHome();
     assertEquals(MavenServerManager.BUNDLED_MAVEN_3, mavenHome);
 
@@ -183,7 +178,7 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
   }
 
 
-  public void testShouldStoreImlFileInSameDirAsPomXml() throws IOException {
+  public void testShouldStoreImlFileInSameDirAsPomXml() {
     Path dir = getTempDir().newPath("", true);
     String projectName = dir.toFile().getName();
     Path pom = dir.resolve("pom.xml");
@@ -210,10 +205,7 @@ public class MavenImportWizardTest extends ProjectWizardTestCase<AbstractProject
     MavenProjectsManager manager = MavenProjectsManager.getInstance(project);
     if (!MavenUtil.isLinearImportEnabled()) {
       manager.waitForImportCompletion();
-      ApplicationManager.getApplication().invokeAndWait(() -> {
-        manager.scheduleImportInTests(Collections.singletonList(file));
-        manager.importProjects();
-      });
+      MavenImportingTestCaseKt.importMavenProjectsSync(manager, List.of(file));
     }
 
     Promise<?> promise = manager.waitForImportCompletion();
